syntax = "proto3";

package task;
option go_package = "github.com/ormushq/ormus/contract/go/task";

import "google/protobuf/timestamp.proto";
import "event/event.proto";

enum TaskStatus {
  TASK_STATUS_INVALID = 0;
  TASK_STATUS_NOT_EXECUTED = 1;
  TASK_STATUS_RETRIABLE_FAILED = 2;
  TASK_STATUS_UNRETRIABLE_FAILED = 3;
  TASK_STATUS_SUCCESS = 4;
}

message Task {
  string id = 1;
  TaskStatus  task_status = 2;
  uint32 attempts = 3;
  string failed_reason = 4;
  event.ProcessedEvent processed_event = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}
